2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* extensions/module_groups.php: Fixed the status colors of
	the modules by groups matrix

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php
	operation/agentes/agents_modules_view.php
	operation/menu.php: Moved the agents VS modules matrix from
	menu to extensions

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/agents_modules_view.php
	operation/agentes/tactical.php
	operation/agentes/group_view.php
	operation/menu.php: Added the agents VS modules matrix
	and changed the color of some alert fired numbers and 
	table rows

2010-08-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php
	godmode/alerts/alert_actions.php: Added the duplicate alert  action
	feature for pending task 3038715

2010-08-04  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_filemanager.php: added parameter $readOnly in the
	function "file_explorer".
	
	*pandoradb.sql, extras/pandoradb_migrate_v3.1_to_v3.2.sql: added into the
	table "talert_template_modules" the column "id_policy_alerts".
	
2010-08-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Change the default map to topology map

2010-08-04  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_filemanager.php: move the action messages to $config
	intermediate var. 
	
	* godmode/setup/file_manager.php: added the message of action with the
	filemanager.

2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed the get_agent_module_info function
	for avoid to show the disabled modules information

2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/default/module_no_data_ball.png: Added a image
	to modules without data

2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_reporting.php
	include/functions_ui.php
	include/functions_db.php